<resources>
    <string name="editor_app_name">RichTextEditor</string>

    <string name="toolbar_placement_top">Toolbar at top</string>
    <string name="toolbar_placement_bottom">Toolbar at bottom</string>

    <string name="toolbar_appearance_inline">Toolbar inline</string>
    <string name="toolbar_appearance_grouped">Toolbar grouped</string>

    <string name="add_html_from_web_page">Add HTML from web page</string>

    <string name="dark_theme">Dark theme</string>

    <string name="dialog_add_html_from_web_page_url_label">Web site address</string>
    <string name="dialog_add_html_from_web_page_url_hint">http://</string>

</resources>
